styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto&display=swap");

*,
*::after,
*::before {
  box-sizing: border-box;
}

:root {
  --primary-color: #fe4775;
  --secondary-color: #161060;
  --primary-text-color: #111111;
  --secondary-text-color: #fff;
  --headline-color: #393939;

  --primary-font-family: "Montserrat", sans-serif;
  --secondary-font-family: "Roboto", sans-serif;
}

html {
  font-size: 16px;
}

body {
  font-family: var(--secondary-font-family);
  height: 100vh;
  margin: 0;
}

/* BLOCK */
.form {
  position: relative;
  height: 100%;
  display: grid;
  align-content: center;
  row-gap: 3em;
  padding: 1.5em;
  padding-bottom: 6.2em;
}

/* ELEMENT */
.form__title {
  font-size: 3em;
  font-weight: normal;
}

.form__subtitle {
  text-transform: uppercase;
}

/* ELEMENT */
.form__submit {
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: var(--primary-color);
  color: var(--secondary-text-color);
  border: none;
  font-size: 1.4em;
  padding: 1.3em 2em;
}

/* ELEMENT */
.form__input {
  font-size: 2.8em;
  border: none;
  border-bottom: 1px solid var(--headline-color);
}

.form__input::placeholder {
  opacity: 0.4;
}

/* BLOCK */
.radio-group {
  display: flex;
  justify-content: space-around;
}

/* ELEMENT */
.radio-group__input {
  position: absolute;
  opacity: 0;
}

.radio-group__input:checked + span {
  color: var(--primary-color);
}

.radio-group__input:focus-visible + span {
  outline: thin solid;
}

